--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
         </div>
       </div>
       <button class="play">Play</button>
+      <div class="tempo">
+        <input
+          type="range"
+          class="tempo-slider"
+          max="300"
+          min="20"
+          value="150"
+        />
+        <p>Tempo : <span class="tempo-nr">150</span></p>
+      </div>
     </div>
 
     <audio src="sounds/kick-808.wav" class="kick-sound"></audio>
