added background and css to all the buttons

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <button data-track="0" class="mute kick-volume">
             <i class="fas fa-volume-mute"></i>
           </button>
-          <select name="kick-select" id="kick-select">
+          <select name="kick-select" id="kick-select" class="select-css">
             <option value="sounds/kick-classic.wav">Classic Kick</option>
             <option value="sounds/kick-808.wav">808 kick</option>
             <option value="sounds/kick-acoustic01.wav">Acoustic kick 01</option>
@@ -46,7 +46,7 @@
           <button data-track="1" class="mute snare-volume">
             <i class="fas fa-volume-mute"></i>
           </button>
-          <select name="snare-select" id="snare-select">
+          <select name="snare-select" id="snare-select" class="select-css">
             <option value="sounds/snare-big.wav">Big snare</option>
             <option value="sounds/snare-808.wav">808 snare</option>
             <option value="sounds/snare-acoustic01.wav"
@@ -72,7 +72,7 @@
           <button data-track="2" class="mute hihat-volume">
             <i class="fas fa-volume-mute"></i>
           </button>
-          <select name="hihat-select" id="hihat-select">
+          <select name="hihat-select" id="hihat-select" class="select-css">
             <option value="sounds/hihat-electro.wav">Big hihat</option>
             <option value="sounds/hihat-808.wav">808 hihat</option>
             <option value="sounds/hihat-acoustic01.wav"
