fixed bug that did't allow you to change sound

--- a/index.html
+++ b/index.html
@@ -23,9 +23,30 @@
             <i class="fas fa-volume-mute"></i>
           </button>
           <select name="kick-select" id="kick-select" class="select-css">
-            <option value="sounds/kick-classic.wav">Classic Kick</option>
-            <option value="sounds/kick-808.wav">808 kick</option>
-            <option value="sounds/kick-acoustic01.wav">Acoustic kick 01</option>
+            <option value="./sounds/kick-classic.wav">Classic Kick</option>
+            <option value="./sounds/kick-808.wav">808 kick</option>
+            <option value="./sounds/kick-acoustic01.wav"
+              >Acoustic kick 01</option
+            >
+            <option value="./sounds/kick-acoustic02.wav"
+              >Acoustic kick 02</option
+            >
+            <option value="./sounds/kick-big.wav">Big kick</option>
+            <option value="./sounds/kick-cultivator.wav"
+              >Cultivator kick</option
+            >
+            <option value="./sounds/kick-deep.wav">Deep kick</option>
+            <option value="./sounds/kick-dry.wav">Dry kick</option>
+            <option value="./sounds/kick-electro01.wav">Electro kick 01</option>
+            <option value="./sounds/kick-electro02.wav">Electro kick 02</option>
+            <option value="./sounds/kick-floppy.wav">Floppy kick</option>
+            <option value="./sounds/kick-gritty.wav">Gritty kick</option>
+            <option value="./sounds/kick-heavy.wav">Heavy kick</option>
+            <option value="./sounds/kick-newwave.wav">New wave kick</option>
+            <option value="./sounds/kick-oldschool.wav">Old school kick</option>
+            <option value="./sounds/kick-plain.wav">Plain kick</option>
+            <option value="./sounds/kick-slapback.wav">Slapback kick</option>
+            <option value="./sounds/kick-softy">Softy kick</option>
           </select>
         </div>
         <div class="kick">
@@ -52,6 +73,27 @@
             <option value="sounds/snare-acoustic01.wav"
               >Acoustic snare 01</option
             >
+            <option value="sounds/snare-acoustic02.wav"
+              >Acustic snare 02</option
+            >
+            <option value="sounds/snare-analog.wav">Analog snare</option>
+            <option value="sounds/snare-block.wav">Block snare</option>
+            <option value="sounds/snare-brute.wav">Brute snare</option>
+            <option value="sounds/snare-dist01.wav">Dist snare 01</option>
+            <option value="sounds/snare-dist02.wav">Dist snare 02</option>
+            <option value="sounds/snare-dist03.wav">Dist snare 03</option>
+            <option value="sounds/snare-electro.wav">Electro snare</option>
+            <option value="sounds/snare-lofi01.wav">Lofi snare 01</option>
+            <option value="sounds/snare-lofi02.wav">Lofi snare 02</option>
+            <option value="sounds/snare-modular.wav">Modular snare</option>
+            <option value="sounds/snare-noise.wav">Noise snare</option>
+            <option value="sounds/snare-pinch.wav">Pinch snare</option>
+            <option value="sounds/snare-punch.wav">Punch snare</option>
+            <option value="sounds/snare-smasher.wav">Smasher snare</option>
+            <option value="sounds/snare-sumo.wav">Sumo snare</option>
+            <option value="sounds/snare-tape.wav">Tape snare</option>
+            <option value="sounds/snare-vinyl01.wav">Vinyl snare 01</option>
+            <option value="sounds/snare-vinyl02">Vinyl snare 02</option>
           </select>
         </div>
         <div class="snare">
