added all the sounds

--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
             <option value="./sounds/kick-oldschool.wav">Old school kick</option>
             <option value="./sounds/kick-plain.wav">Plain kick</option>
             <option value="./sounds/kick-slapback.wav">Slapback kick</option>
-            <option value="./sounds/kick-softy">Softy kick</option>
+            <option value="./sounds/kick-softy.wav">Softy kick</option>
+            <option value="./sounds/kick-stomp.wav"> Stomp kick</option>
+            <option value="./sounds/kick-tape.wav">Tape kick</option>
+            <option value="./sounds/kick-thump.wav">Thump kick</option>
+            <option value="./sounds/kick-tight.wav">Tight kick</option>
+            <option value="./sounds/kick-tron.wav">Tron kick</option>
+            <option value="./sounds/kick-vinyl01.wav">Vinyl kick 01</option>
+            <option value="./sounds/kick-vinyl02.wav">Vinyl kick 02</option>
+            <option value="./sounds/kick-zapper.wav">Zapper kick</option>
           </select>
         </div>
         <div class="kick">
@@ -93,7 +101,7 @@
             <option value="sounds/snare-sumo.wav">Sumo snare</option>
             <option value="sounds/snare-tape.wav">Tape snare</option>
             <option value="sounds/snare-vinyl01.wav">Vinyl snare 01</option>
-            <option value="sounds/snare-vinyl02">Vinyl snare 02</option>
+            <option value="sounds/snare-vinyl02.wav">Vinyl snare 02</option>
           </select>
         </div>
         <div class="snare">
@@ -115,11 +123,21 @@
             <i class="fas fa-volume-mute"></i>
           </button>
           <select name="hihat-select" id="hihat-select" class="select-css">
-            <option value="sounds/hihat-electro.wav">Big hihat</option>
             <option value="sounds/hihat-808.wav">808 hihat</option>
             <option value="sounds/hihat-acoustic01.wav"
               >Acoustic hihat 01</option
             >
+            <option value="./sounds/hihat-acoustic02.wav"
+              >Acoustic hihat 02</option
+            >
+            <option value="./sounds/hihat-analog.wav">Analog hihat</option>
+            <option value="./sounds/hihat-digital.wav">Digital hihat</option>
+            <option value="./sounds/hihat-dist01.wav">Dist hihat 01</option>
+            <option value="./sounds/hihat-dist02.wav">Dist hihat 02</option>
+            <option value="./sounds/hihat-electro.wav">Electro hihat</option>
+            <option value="./sounds/hihat-plain.wav">Plain hihat</option>
+            <option value="./sounds/hihat-reso.wav">Reso hihat</option>
+            <option value="./sounds/hihat-ring.wav">Ring hihat</option>
           </select>
         </div>
         <div class="hihat">
